# forgeviz

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/innovate/: 2026-05-25-forgeviz-differentiation-morph.md  2026-05-25-forgeviz-ecosystem-transfer.md
js/: forgeviz.js
src/forgeviz/: __init__.py  calibration.py
src/forgeviz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/forgeviz/analytics/: __init__.py  auto.py  predict.py  recommend.py
src/forgeviz/charts/: __init__.py  advanced.py  bayesian.py  capability.py  control.py  diagnostic.py  distribution.py  effects.py  gage.py  generic.py  interactive.py  knowledge.py  reliability.py  scatter.py  socratic.py  statistical.py  surface.py  time_series.py  trellis.py  tufte.py
src/forgeviz/core/: __init__.py  bridge.py  colors.py  dashboard.py  export.py  report.py  spec.py  streaming.py
src/forgeviz/renderers/: __init__.py  html.py  plotly.py  svg.py  vegalite.py
src/forgeviz/static/js/: forgeviz-dashboard.js  forgeviz-interact.js  forgeviz.js
src/forgeviz/themes/: __init__.py
tests/: test_advanced.py  test_all_charts.py  test_analytics.py  test_bridge.py  test_bridge_contract_fallback.py  test_charts.py  test_complete.py  test_dashboard.py  test_differentiation.py  test_fixes.py  test_generic.py  test_knowledge.py  test_neutral_render.py  test_per_element.py  test_predict.py  test_report.py  test_trellis.py  test_tufte.py
